# api/kratosblog/server/v1/category.pb.validate.go
@@ -1,0 +1,274 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: api/kratosblog/server/v1/category.proto
+
+package v1
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on ListCategoryRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *ListCategoryRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ListCategoryRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// ListCategoryRequestMultiError, or nil if none found.
+func (m *ListCategoryRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ListCategoryRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if len(errors) > 0 {
+		return ListCategoryRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// ListCategoryRequestMultiError is an error wrapping multiple validation
+// errors returned by ListCategoryRequest.ValidateAll() if the designated
+// constraints aren't met.
+type ListCategoryRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ListCategoryRequestMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ListCategoryRequestMultiError) AllErrors() []error { return m }
+
+// ListCategoryRequestValidationError is the validation error returned by
+// ListCategoryRequest.Validate if the designated constraints aren't met.
+type ListCategoryRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ListCategoryRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ListCategoryRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ListCategoryRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ListCategoryRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ListCategoryRequestValidationError) ErrorName() string {
+	return "ListCategoryRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ListCategoryRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sListCategoryRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ListCategoryRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ListCategoryRequestValidationError{}
+
+// Validate checks the field values on ListCategoryReply with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *ListCategoryReply) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ListCategoryReply with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// ListCategoryReplyMultiError, or nil if none found.
+func (m *ListCategoryReply) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ListCategoryReply) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	for idx, item := range m.GetList() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, ListCategoryReplyValidationError{
+						field:  fmt.Sprintf("List[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, ListCategoryReplyValidationError{
+						field:  fmt.Sprintf("List[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return ListCategoryReplyValidationError{
+					field:  fmt.Sprintf("List[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	if len(errors) > 0 {
+		return ListCategoryReplyMultiError(errors)
+	}
+
+	return nil
+}
+
+// ListCategoryReplyMultiError is an error wrapping multiple validation errors
+// returned by ListCategoryReply.ValidateAll() if the designated constraints
+// aren't met.
+type ListCategoryReplyMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ListCategoryReplyMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ListCategoryReplyMultiError) AllErrors() []error { return m }
+
+// ListCategoryReplyValidationError is the validation error returned by
+// ListCategoryReply.Validate if the designated constraints aren't met.
+type ListCategoryReplyValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ListCategoryReplyValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ListCategoryReplyValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ListCategoryReplyValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ListCategoryReplyValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ListCategoryReplyValidationError) ErrorName() string {
+	return "ListCategoryReplyValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ListCategoryReplyValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sListCategoryReply.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ListCategoryReplyValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ListCategoryReplyValidationError{}
