# api/kratosblog/server/v1/category_http.pb.go
@@ -1,0 +1,75 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.6.1
+// - protoc             v3.21.12
+// source: api/kratosblog/server/v1/category.proto
+
+package v1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationCategoryListCategory = "/api.kratosblog.server.v1.Category/ListCategory"
+
+type CategoryHTTPServer interface {
+	ListCategory(context.Context, *ListCategoryRequest) (*ListCategoryReply, error)
+}
+
+func RegisterCategoryHTTPServer(s *http.Server, srv CategoryHTTPServer) {
+	r := s.Route("/")
+	r.GET("/v1/category/list", _Category_ListCategory0_HTTP_Handler(srv))
+}
+
+func _Category_ListCategory0_HTTP_Handler(srv CategoryHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in ListCategoryRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationCategoryListCategory)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.ListCategory(ctx, req.(*ListCategoryRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*ListCategoryReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+type CategoryHTTPClient interface {
+	ListCategory(ctx context.Context, req *ListCategoryRequest, opts ...http.CallOption) (rsp *ListCategoryReply, err error)
+}
+
+type CategoryHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewCategoryHTTPClient(client *http.Client) CategoryHTTPClient {
+	return &CategoryHTTPClientImpl{client}
+}
+
+func (c *CategoryHTTPClientImpl) ListCategory(ctx context.Context, in *ListCategoryRequest, opts ...http.CallOption) (*ListCategoryReply, error) {
+	var out ListCategoryReply
+	pattern := "/v1/category/list"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationCategoryListCategory))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
